# openzl

./: .editorconfig  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  alloc.html  ark_groth16.html  introduction.html  native_nonnative.html  plonky2.html  poseidon_permutation_tutorial.html  print.html  proof_systems.html  searchindex.js  searchindex.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  release.yml
.github/workflows/: audit.yml  benchmark.yml  book.yml  ci.yml  release.yml
docs/: CNAME  README.md  book.toml  proposal.md
docs/src/: SUMMARY.md  alloc.md  ark_groth16.md  introduction.md  native_nonnative.md  plonky2.md  poseidon_hash_example.md  poseidon_permutation_tutorial.md  proof_systems.md  semaphore_example.md
docs/src/std/: alloc.md  bool.md  cmp.md  eclair_std_lib.md  num.md  ops.md
eclair/: Cargo.toml
eclair-derive/: Cargo.toml
eclair-derive/src/: alias.rs  lib.rs
eclair/src/: alloc.rs  bool.rs  cmp.rs  execution.rs  lib.rs  num.rs  ops.rs
examples/ecdsa-wasm/: Cargo.toml
examples/ecdsa-wasm/src/: lib.rs
openzl/: Cargo.toml  README.md
openzl-crypto/: Cargo.toml
openzl-crypto/src/: accumulator.rs  constraint.rs  hash.rs  lib.rs  password.rs
openzl-crypto/src/algebra/: diffie_hellman.rs  mod.rs
openzl-crypto/src/encryption/: hybrid.rs  mod.rs
openzl-crypto/src/encryption/convert/: header.rs  key.rs  mod.rs  plaintext.rs
openzl-crypto/src/key/: agreement.rs  mod.rs
openzl-crypto/src/merkle_tree/: forest.rs  fork.rs  full.rs  inner_tree.rs  mod.rs  node.rs  partial.rs  path.rs  single_path.rs  test.rs  tree.rs
openzl-crypto/src/permutation/: duplex.rs  mod.rs  sponge.rs
openzl-crypto/src/poseidon/: README.md  arkworks.rs  constants.rs  encryption.rs  hash.rs  lfsr.rs  matrix.rs  mds.rs  mod.rs  preprocessing.rs  round_constants.rs
openzl-crypto/src/poseidon/mds_hardcoded_tests/: width5  width7
openzl-crypto/src/signature/: convert.rs  mod.rs
openzl-derive/: Cargo.toml  README.md
openzl-derive/src/: component.rs  lib.rs
openzl-tutorials/: Cargo.toml
openzl-tutorials/src/: lib.rs  poseidon.rs  semaphore.rs
openzl-tutorials/src/merkle_tree/: arkworks.rs  mod.rs
openzl-tutorials/src/poseidon/: arkworks.rs  mod.rs
openzl-tutorials/src/semaphore/: arkworks.rs  mod.rs
openzl-util/: Cargo.toml  README.md
openzl-util/src/: array.rs  bytes.rs  cmp.rs  codec.rs  convert.rs  future.rs  lib.rs  macros.rs  num.rs  ops.rs  persistence.rs  pointer.rs  rand.rs  sealed.rs  vec.rs
openzl-util/src/collections/: btree_map.rs  mod.rs  vec_deque.rs
openzl-util/src/http/: mod.rs  reqwest.rs  tide.rs
openzl-util/src/iter/: chunk_by.rs  finder.rs  mod.rs  select_all.rs
openzl-util/src/time/: lock.rs  mod.rs
openzl/src/: lib.rs
plugins/: README.md
plugins/arkworks/: Cargo.toml
plugins/arkworks/src/: algebra.rs  constraint.rs  ff.rs  groth16.rs  lib.rs  pairing.rs  rand.rs  ratio.rs  serialize.rs
plugins/arkworks/src/constraint/: fp.rs  mod.rs
plugins/arkworks/src/poseidon/: config.rs  mod.rs  test.rs
plugins/arkworks/src/poseidon/mds_hardcoded_tests/: .gitignore  correct_mds_generation.sage  width10  width11  width12  width2  width3  width4  width6  width8  width9
plugins/arkworks/src/poseidon/parameters_hardcoded_test/: .gitignore  generate_parameters_grain_deterministic.sage  lfsr_values
plugins/arkworks/src/poseidon/permutation_hardcoded_test/: .gitignore  poseidonperm_bls381_width3.sage  width3
plugins/dalek/: Cargo.toml
plugins/dalek/src/: ed25519.rs  lib.rs
plugins/halo2/: Cargo.toml
plugins/halo2/src/: compiler.rs  lib.rs
plugins/plonky2/: Cargo.toml
plugins/plonky2/src/: base.rs  bool.rs  compiler.rs  field.rs  lib.rs
plugins/plonky2/src/poseidon/: mod.rs
rustdoc/latest/: crates.js  help.html  search-index.js  settings.html  source-files.js
rustdoc/latest/eclair/: all.html  index.html  sidebar-items.js  trait.Has.html  trait.Native.html  trait.NonNative.html  type.Type.html
rustdoc/latest/eclair/alloc/: index.html  sidebar-items.js  trait.Allocate.html  trait.Allocator.html  trait.Constant.html  trait.Variable.html  type.Const.html  type.Var.html
rustdoc/latest/eclair/bool/: index.html  macro.impl_conditional_select!.html  macro.impl_conditional_select.html  sidebar-items.js  trait.Assert.html  trait.AssertEq.html  trait.ConditionalSelect.html  trait.ConditionalSwap.html  type.Bool.html
rustdoc/latest/eclair/cmp/: index.html  macro.impl_partial_eq!.html  macro.impl_partial_eq.html  sidebar-items.js  trait.Eq.html  trait.HasEq.html  trait.HasPartialEq.html  trait.PartialEq.html
rustdoc/latest/eclair/execution/: index.html  sidebar-items.js  trait.Engine.html  trait.ProofSystem.html
rustdoc/latest/eclair/num/: index.html  macro.define_uint!.html  macro.define_uint.html  macro.define_zero_one.html  (+76 more)
rustdoc/latest/openzl/: all.html  attr.component.html  index.html  sidebar-items.js
rustdoc/latest/openzl_crypto/: all.html  attr.component.html  index.html  trait.NonNative.html
rustdoc/latest/openzl_derive/: all.html  attr.component.html  index.html  sidebar-items.js
rustdoc/latest/openzl_plugin_arkworks/: all.html  index.html  sidebar-items.js
rustdoc/latest/openzl_plugin_dalek/: all.html  index.html  sidebar-items.js
rustdoc/latest/openzl_tutorials/: all.html  index.html  sidebar-items.js
rustdoc/latest/openzl_util/: all.html  fn.array_map.html  fn.array_map_ref.html  fn.byte_count.html  fn.fallible_array_map.html  fn.fallible_array_map_ref.html  fn.into_array_unchecked.html  fn.into_boxed_array_unchecked.html  index.html  macro.assert_all_eq_len.html  macro.cfg_chunks.html  macro.cfg_chunks_mut.html  macro.cfg_into_iter.html  macro.cfg_iter.html  macro.cfg_iter_mut.html  macro.cfg_reduce.html  macro.create_seal.html  macro.from_variant.html  macro.impl_empty_codec.html  macro.seal.html  sidebar-items.js  struct.Array.html  struct.BoxArray.html  trait.AsBytes.html  trait.Bytes.html  trait.FromBytes.html  trait.IntoBytes.html  trait.IsType.html  trait.SizeLimit.html
std/: bool.html  cmp.html  eclair_std_lib.html  num.html  ops.html
(+3985 files in other folders)
