[package]
name = "openzl-crypto"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openzklib/openzl"
homepage = "https://openzl.org"
documentation = "https://docs.rs/openzl-crypto"
categories = [""]
keywords = [""]
description = "OpenZL Cryptography Library"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "openzklib/openzl" }
is-it-maintained-open-issues = { repository = "openzklib/openzl" }
maintenance = { status = "actively-developed" }

[features]
# Allocation
alloc = ["eclair/alloc", "openzl-util/alloc"]

# Arkworks Backend
arkworks = [
    "ark-ec",
    "ark-ff",
    "ark-r1cs-std",
    "ark-relations",
    "ark-serialize",
]

# Dalek Cryptography Backend
dalek = ["ed25519-dalek"]

# Serde Serialization
serde = [
    "ed25519-dalek?/serde",
    "openzl-util/serde",
]

# Standard Library
std = [
    "ark-bls12-381?/std",
    "ark-bn254?/std",
    "ark-ec?/std",
    "ark-ed-on-bls12-381?/std",
    "ark-ed-on-bn254?/std",
    "ark-ff?/std",
    "ark-r1cs-std?/std",
    "ark-relations?/std",
    "ark-serialize?/std",
    "openzl-util/std",
]

# Test Frameworks
test = []

[dependencies]
ark-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-ec = { version = "0.3.0", optional = true, default-features = false }
ark-ed-on-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ed-on-bn254 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ff = { version = "0.3.0", optional = true, default-features = false }
ark-r1cs-std = { version = "0.3.1", optional = true, default-features = false }
ark-relations = { version = "0.3.0", optional = true, default-features = false }
ark-serialize = { version = "0.3.0", optional = true, default-features = false, features = ["derive"] }
eclair = { path = "../eclair", default-features = false }
ed25519-dalek = { version = "1.0.1", optional = true, default-features = false, features = ["u64_backend"] }
openzl-derive = { path = "../openzl-derive", default-features = false }
openzl-util = { path = "../openzl-util", default-features = false }
