[package]
name = "openzl-derive"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openzklib/openzl"
homepage = "https://openzl.org"
documentation = "https://docs.rs/openzl-derive"
categories = [""]
keywords = [""]
description = "OpenZL Macros"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "openzklib/openzl" }
is-it-maintained-open-issues = { repository = "openzklib/openzl" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.47", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.21", default-features = false, features = ["proc-macro"] }
syn = { version = "1.0.90", default-features = false, features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro"] }

