[package]
name = "openzl-tutorials"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Alloc
alloc = ["openzl-crypto/alloc"]

# Arkworks implementation of Bls12-381
bls12-381 = ["arkworks/bls12-381", "curve"]

# Arkworks elliptic curve and finite field
curve = ["arkworks/ec", "arkworks/ff"]

[dependencies]
arkworks = { package = "openzl-plugin-arkworks", path = "../plugins/arkworks", optional = true, default-features = false }
eclair = { path = "../eclair", default-features = false }
openzl-crypto = { path = "../openzl-crypto", default-features = false }
