[package]
name = "openzl-tutorials"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Alloc
alloc = ["openzl-crypto/alloc"]

# Arkworks implementation of Bls12-381
bls12-381 = ["arkworks/bls12-381", "curve"]

# Arkworks implementation of Bn254
bn254 = ["arkworks/bn254", "curve"]

# Arkworks elliptic curve and finite field
curve = ["arkworks/ec", "arkworks/ff"]

# Arkworks implementation of Groth16
groth16 = ["arkworks/groth16", "curve"]

# Rand
rand = ["openzl-util/getrandom"]

[dependencies]
arkworks = { package = "openzl-plugin-arkworks", path = "../plugins/arkworks", optional = true, default-features = false }
eclair = { path = "../eclair", default-features = false }
openzl-crypto = { path = "../openzl-crypto", default-features = false }
openzl-util = { path = "../openzl-util", default-features = false }
