[package]
name = "openzl"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openzklib/openzl"
homepage = "https://openzl.org"
documentation = "https://docs.rs/eclair"
categories = [""]
keywords = [""]
description = "Open Zero-Knowledge Library"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "openzklib/openzl" }
is-it-maintained-open-issues = { repository = "openzklib/openzl" }
maintenance = { status = "actively-developed" }

[features]
# Allocation
alloc = ["openzl-crypto/alloc", "openzl-util/alloc"]

[dependencies]
openzl-crypto = { path = "../openzl-crypto", default-features = false }
openzl-derive = { path = "../openzl-derive", default-features = false }
openzl-util = { path = "../openzl-util", default-features = false }
