[package]
name = "openzl-plugin-arkworks"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openzklib/openzl"
homepage = "https://openzl.org"
documentation = "https://docs.rs/openzl-plugin-arkworks"
categories = [""]
keywords = [""]
description = "Open ZL Arkworks Plugin"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "openzklib/openzl" }
is-it-maintained-open-issues = { repository = "openzklib/openzl" }
maintenance = { status = "actively-developed" }

[dependencies]
ark-bls12-377 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3.0", optional = true, default-features = false, features = ["curve"] }
ark-ec = { version = "0.3.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ed-on-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ed-on-bn254 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-ff = { version = "0.3.0", default-features = false }
ark-groth16 = { version = "0.3.0", optional = true, default-features = false }
ark-r1cs-std = { version = "0.3.1", default-features = false }
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false, features = ["derive"] }
ark-snark = { version = "0.3.0", default-features = false }
eclair = { path = "../../eclair", default-features = false }
openzl-crypto = { path = "../../openzl-crypto", default-features = false }
openzl-util = { path = "../../openzl-util", default-features = false }

[dev-dependencies]
openzl-plugin-arkworks = { path = ".", default-features = false, features = ["ark-bn254"] }
openzl-util = { path = "../../openzl-util", default-features = false, features = ["getrandom"] }
