[package]
name = "openzl-plugin-plonky2"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openzklib/openzl"
homepage = "https://openzl.org"
documentation = "https://docs.rs/openzl-plugin-plonky2"
categories = [""]
keywords = [""]
description = "Open ZL Plonky2 Plugin"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "openzklib/openzl" }
is-it-maintained-open-issues = { repository = "openzklib/openzl" }
maintenance = { status = "actively-developed" }

[features]
ecdsa = ["plonky2_ecdsa"]

[dependencies]
eclair = { path = "../../eclair", default-features = false }
openzl-crypto = { path = "../../openzl-crypto", default-features = false }
openzl-util = { path = "../../openzl-util", default-features = false }
plonky2 = { git = "https://github.com/openzklib/plonky2", branch = "feat/circuit-data-serde", default-features = false }
plonky2_ecdsa = { git = "https://github.com/openzklib/plonky2", branch = "feat/circuit-data-serde", optional = true, default-features = false }
starky = { git = "https://github.com/openzklib/plonky2", branch = "feat/circuit-data-serde", default-features = false }
